force-app/main/default/objects/PagosOnline_Config__mdt/PagosOnline_Config__mdt.object-meta.xml
<CustomObject>
    <label>PagosOnline Config</label>
    <pluralLabel>PagosOnline Configs</pluralLabel>
</CustomObject>