force-app/main/default/objects/PagosOnline_Config__mdt/fields/AESKeyHex__c.field-meta.xml
<CustomField>
    <fullName>AESKeyHex__c</fullName>
    <label>AES Key (Hex)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>