force-app/main/default/objects/PagosOnline_Config__mdt/fields/BranchId__c.field-meta.xml
<CustomField>
    <fullName>BranchId__c</fullName>
    <label>Branch Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>