force-app/main/default/objects/PagosOnline_Config__mdt/fields/CompanyId__c.field-meta.xml
<CustomField>
    <fullName>CompanyId__c</fullName>
    <label>Company Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>