force-app/main/default/objects/PagosOnline_Config__mdt/fields/Data0__c.field-meta.xml
<CustomField>
    <fullName>Data0__c</fullName>
    <label>Data0</label>
    <length>255</length>
    <type>Text</type>
</CustomField>