force-app/main/default/objects/PagosOnline_Config__mdt/fields/GeneratePath__c.field-meta.xml
<CustomField>
    <fullName>GeneratePath__c</fullName>
    <label>Generate Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>