force-app/main/default/objects/PagosOnline_Config__mdt/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>